modified:   example.html 	modified:   jammer.css 	modified:   jammer.css.map 	modified:   jammer.min.css 	modified:   jammer.min.css.map 	modified:   jammer.strippeddown.css 	modified:   jammer.strippeddown.css.map 	modified:   jammer.strippeddown.min.css 	modified:   jammer.strippeddown.min.css.map 	modified:   sass/_animations.scss 	modified:   sass/_base.scss 	modified:   sass/_colors.scss 	modified:   sass/_components.scss 	modified:   sass/_inputfields.scss

--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -74,18 +74,19 @@
 
 @keyframes jammer_blinking{
 	from{ 
-		background-position: center -50%;
+		background-position-x: -50%;
 	}
 	to{
-		background-position: center 150%;
+		background-position-x: 150%;
 	}
 }
 %blinking{
-	background-image: linear-gradient(90deg,transparent,rgba(255,255,255,0.5) 50%, transparent) !important;
-	background-size:cover;
+	background-image: radial-gradient( rgba(255,255,255,0.85), transparent 75% ) !important;
+	background-size: 25% 200% !important;
+	background-position-y: center;
+	background-repeat: no-repeat !important;
 	animation-name: jammer_blinking;
 	animation-duration: 1s;
-	animation-timing-function: ease-in-out;
 	animation-iteration-count: infinite;
 	animation-play-state: running;
 }
