--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -258,7 +258,7 @@ code{
 .codeArea{
 	@extend %code;
 	display:block;
-	background: rgba(0,0,0,0.1);
+	background: var(--background-base-darker);
 	border-left: 3px solid var(--main-color);
 	counter-reset: codeArea;
 
@@ -278,12 +278,12 @@ code{
 		width: 1rem;
 		display: inline-block;
 		height: 1.15rem;
-		background:rgba(0,0,0,0.1);
+		background:rgba(0,0,0,0.05);
 		text-align: center;
 		line-height: 1.15rem;
 		font-size: 10px;
 		font-weight: bold;
-		color: rgba(0,0,0,0.35);
+		color: rgba(0,0,0,0.5);
 	}
 }
 
@@ -707,7 +707,7 @@ input[type="submit"],
 	display:block;
 	width:100%;
 	height: 4px;
-	background: var(--background-base);
+	background: var(--background-base-darker);
 	position:relative;
 	overflow:hidden;
 
@@ -715,12 +715,32 @@ input[type="submit"],
 		@extend %blinking;
 		content: '';
 		display:inline-block;
-		height:4px;
+		height: 100%;
 		width: calc( 100% * var(--value) / ( var(--max) - var(--min) ) );
-		background: var(--main-color);
+		background-color: var(--main-color);
 		position:absolute;
 		top:0;
 		left:0;
 		transition: 0.2s width ease;
+	}
+
+	&.win{
+		height: 20px;
+		border-radius: 1px;
+		background-color: var(--button-greyedout);
+		background-image: radial-gradient(rgba(255, 255, 255, 0.225), transparent 75%) !important;
+		&::after{
+			background-color: var(--success);
+		}
+	}
+	&.mac{
+		height:12px;
+		border-radius: 6px;
+		background-color: var(--button-greyedout);
+		box-shadow:inset 0 0 2px rgba(0,0,0,0.51), 0 0 2px rgba(255,255,255,0.5);
+		&::after{
+			background-color: var(--info);
+			animation-play-state: paused;
+		}
 	}
 }
