--- a/jammer.css
+++ b/jammer.css
@@ -19,7 +19,7 @@
 }
 body {
   --background-base: #fff;
-  --background-base-darker: #f9f9f9;
+  --background-base-darker: #f3f3f3;
   --text-base: #080808;
   --info: dodgerblue;
   --info-lighter: #f0f0f0;
@@ -46,7 +46,7 @@ body {
 }
 body.dark-mode {
   --background-base: #181818;
-  --background-base-darker: #0a0a0a;
+  --background-base-darker: #121212;
   --text-base: #fcfcfc;
   --info: dodgerblue;
   --info-lighter: #f0f0f0;
@@ -61,7 +61,7 @@ body.dark-mode {
 @media (prefers-color-scheme: dark) {
   body {
     --background-base: #181818;
-    --background-base-darker: #0a0a0a;
+    --background-base-darker: #121212;
     --text-base: #fcfcfc;
     --info: dodgerblue;
     --info-lighter: #f0f0f0;
@@ -184,6 +184,20 @@ sub {
 
 sup {
   top: -0.5rem;
+}
+
+time {
+  font-family: monospace;
+  font-size: 1.05rem;
+  white-space: nowrap;
+}
+
+blockquote {
+  font-style: italic;
+  display: block;
+  background: var(--background-base-darker);
+  border-left: 3px solid var(--main-color);
+  padding: 5px;
 }
 
 a {
@@ -446,6 +460,13 @@ input.alert[type=submit],
   line-height: 1.75;
 }
 
+body {
+  --main-color-forinput: var(--main-color);
+}
+body.dark-mode {
+  --main-color-forinput: var(--main-color-lighter);
+}
+
 select, textarea, input[type=text], input[type=number], input[type=date], input[type=datetime-local], input[type=email], input[type=url], input[type=password], input[type=search], input[type=tel], input[type=file], input[type=color] {
   font-family: inherit;
   font-size: 100%;
@@ -453,7 +474,9 @@ select, textarea, input[type=text], input[type=number], input[type=date], input[
   margin: 0;
   overflow: auto;
   border-color: transparent;
-  background: rgba(0, 0, 0, 0.05);
+  /*background: rgba(0,0,0,0.05);*/
+  background: var(--background-base-darker);
+  color: var(--text-base);
   padding: 0 1rem;
   line-height: 2;
   border-radius: 2px 2px 0 0;
@@ -462,14 +485,14 @@ select, textarea, input[type=text], input[type=number], input[type=date], input[
   border-width: 0 0 var(--input-border-bottom) 0;
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.1);
-  caret-color: var(--main-color);
+  caret-color: var(--main-color-forinput);
   transition: 0.2s border-bottom-color;
 }
 select:focus, textarea:focus, input[type=text]:focus, input[type=number]:focus, input[type=date]:focus, input[type=datetime-local]:focus, input[type=email]:focus, input[type=url]:focus, input[type=password]:focus, input[type=search]:focus, input[type=tel]:focus, input[type=file]:focus, input[type=color]:focus {
   outline: none;
 }
 select:focus:not([readonly]), textarea:focus:not([readonly]), input[type=text]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=search]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=file]:focus:not([readonly]), input[type=color]:focus:not([readonly]) {
-  border-color: var(--main-color);
+  border-color: var(--main-color-forinput);
 }
 select:focus:not([readonly])::placeholder, textarea:focus:not([readonly])::placeholder, input[type=text]:focus:not([readonly])::placeholder, input[type=number]:focus:not([readonly])::placeholder, input[type=date]:focus:not([readonly])::placeholder, input[type=datetime-local]:focus:not([readonly])::placeholder, input[type=email]:focus:not([readonly])::placeholder, input[type=url]:focus:not([readonly])::placeholder, input[type=password]:focus:not([readonly])::placeholder, input[type=search]:focus:not([readonly])::placeholder, input[type=tel]:focus:not([readonly])::placeholder, input[type=file]:focus:not([readonly])::placeholder, input[type=color]:focus:not([readonly])::placeholder {
   opacity: 0;
@@ -478,7 +501,7 @@ select:focus:not([readonly]) + .inputLabel, textarea:focus:not([readonly]) + .in
   left: 0;
   top: -0.5rem;
   font-size: 80%;
-  color: var(--main-color);
+  color: var(--main-color-forinput);
 }
 select::placeholder, textarea::placeholder, input[type=text]::placeholder, input[type=number]::placeholder, input[type=date]::placeholder, input[type=datetime-local]::placeholder, input[type=email]::placeholder, input[type=url]::placeholder, input[type=password]::placeholder, input[type=search]::placeholder, input[type=tel]::placeholder, input[type=file]::placeholder, input[type=color]::placeholder {
   font-weight: 500;
@@ -499,7 +522,7 @@ select:not(:focus):not([readonly]):not(:placeholder-shown) + .inputLabel, textar
   left: 0;
   top: -0.5rem;
   font-size: 80%;
-  color: var(--main-color);
+  color: var(--main-color-forinput);
 }
 
 input + .showPwd,
@@ -570,7 +593,7 @@ select + .selectHint, select + .inputLabel + .selectHint {
   margin-top: -2.057rem;
   margin-right: 1.5rem;
   position: relative;
-  z-index: -1;
+  z-index: 0;
   transition: 0.15s background-color ease-out;
 }
 select + .selectHint::after, select + .inputLabel + .selectHint::after {
@@ -670,16 +693,16 @@ input[type=checkbox]:checked + .switch::after {
   transform: translate(0.93rem, 0);
 }
 input[type=checkbox]:checked + .switch + .inputLabel + .inputLabel {
-  color: var(--main-color);
-  border-bottom-color: var(--main-color);
+  color: var(--main-color-forinput);
+  border-bottom-color: var(--main-color-forinput);
 }
 input[type=checkbox]:checked + .check {
   background: var(--main-color);
   border-color: var(--main-color);
 }
 input[type=checkbox]:checked + .check + .inputLabel {
-  color: var(--main-color);
-  border-bottom-color: var(--main-color);
+  color: var(--main-color-forinput);
+  border-bottom-color: var(--main-color-forinput);
 }
 input[type=checkbox]:not(:checked) + .check::after {
   opacity: 0;
@@ -724,8 +747,8 @@ input[type=radio]:checked + .radio {
   border-color: var(--main-color);
 }
 input[type=radio]:checked + .radio + .inputLabel {
-  color: var(--main-color);
-  border-bottom-color: var(--main-color);
+  color: var(--main-color-forinput);
+  border-bottom-color: var(--main-color-forinput);
 }
 input[type=radio]:not(:checked) + .radio::after {
   opacity: 0;
@@ -742,8 +765,8 @@ input[type=range]::-webkit-slider-thumb {
   position: relative;
   width: 1rem;
   height: 1.5rem;
-  background: var(--main-color);
-  border: 1px solid var(--main-color);
+  background: var(--main-color-forinput);
+  border: 1px solid var(--main-color-forinput);
   border-radius: 2px;
   cursor: pointer;
 }
@@ -755,7 +778,8 @@ input[type=range] {
   width: 100%;
   margin-top: 1.25rem;
   height: 1.25rem;
-  background: repeating-linear-gradient(90deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15) 10px, rgba(0, 0, 0, 0.25) 10px, rgba(0, 0, 0, 0.25) 11px);
+  background-color: var(--background-base-darker);
+  background-image: repeating-linear-gradient(90deg, transparent, transparent 10px, rgba(0, 0, 0, 0.15) 10px, rgba(0, 0, 0, 0.15) 11px);
   border-radius: 2px 2px 0 0;
   opacity: 0.85;
   cursor: pointer;
@@ -796,7 +820,7 @@ input[type=range] + .inputLabel {
   left: 0;
   top: 0;
   font-size: 80%;
-  color: var(--main-color);
+  color: var(--main-color-forinput);
 }
 
 input[type=number]:not(.no-buttons)::-webkit-inner-spin-button, input[type=number]:not(.no-buttons)::-webkit-outer-spin-button {
@@ -893,10 +917,10 @@ input[type=color]::after {
   top: 1.1rem;
 }
 input[type=color]:focus::-webkit-color-swatch {
-  border-color: var(--main-color);
+  border-color: var(--main-color-forinput);
 }
 input[type=color]:focus::before {
-  color: var(--main-color);
+  color: var(--main-color-forinput);
 }
 
 .tagLeft {
@@ -930,8 +954,8 @@ input[type=color]:focus::before {
 }
 
 .tagLeft:focus-within :first-child:not(button):not(.inputLabel) {
-  border-bottom-color: var(--main-color) !important;
-  color: var(--main-color) !important;
+  border-bottom-color: var(--main-color-forinput) !important;
+  color: var(--main-color-forinput) !important;
 }
 
 .tagRight {
@@ -968,12 +992,12 @@ input[type=color]:focus::before {
 }
 
 .tagRight:focus-within *:last-child:not(button):not(.inputLabel) {
-  border-bottom-color: var(--main-color) !important;
-  color: var(--main-color) !important;
+  border-bottom-color: var(--main-color-forinput) !important;
+  color: var(--main-color-forinput) !important;
 }
 
 input[type=password] {
-  color: var(--main-color);
+  color: var(--main-color-forinput);
 }
 input[type=password]::placeholder {
   color: var(--text-base);
@@ -995,7 +1019,7 @@ input + .inputLabel + .showPwd::after {
 
 input[type=text] + .showPwd,
 input[type=text] + .inputLabel + .showPwd {
-  background: var(--main-color);
+  background: var(--main-color-forinput);
   color: var(--main-text-cl);
 }
 
@@ -1006,6 +1030,11 @@ input[type=checkbox]:checked + .switch + .inputLabel {
 input[type=checkbox]:not(:checked) + .switch + .inputLabel + .inputLabel {
   right: 50%;
   opacity: 0;
+}
+
+[contenteditable]:active, [contenteditable]:focus {
+  outline: 1px solid var(--main-color-forinput) !important;
+  box-shadow: 0 0 5px var(--main-color-forinput);
 }
 
 [hidden], .hidden {
@@ -1311,18 +1340,19 @@ input[type=checkbox]:not(:checked) + .switch + .inputLabel + .inputLabel {
 
 @keyframes jammer_blinking {
   from {
-    background-position: center -50%;
+    background-position-x: -50%;
   }
   to {
-    background-position: center 150%;
+    background-position-x: 150%;
   }
 }
 .pwa_loadBar::after, .jammer_blinking {
-  background-image: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.5) 50%, transparent) !important;
-  background-size: cover;
+  background-image: radial-gradient(rgba(255, 255, 255, 0.85), transparent 75%) !important;
+  background-size: 25% 200% !important;
+  background-position-y: center;
+  background-repeat: no-repeat !important;
   animation-name: jammer_blinking;
   animation-duration: 1s;
-  animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
   animation-play-state: running;
 }
@@ -1605,7 +1635,7 @@ code {
 
 .codeArea {
   display: block;
-  background: rgba(0, 0, 0, 0.1);
+  background: var(--background-base-darker);
   border-left: 3px solid var(--main-color);
   counter-reset: codeArea;
 }
@@ -1624,12 +1654,12 @@ code {
   width: 1rem;
   display: inline-block;
   height: 1.15rem;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.05);
   text-align: center;
   line-height: 1.15rem;
   font-size: 10px;
   font-weight: bold;
-  color: rgba(0, 0, 0, 0.35);
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .pwa_dialog_backDrop {
@@ -2003,20 +2033,39 @@ input[type=submit]:not(.secondary):not([disabled]) .spin7,
   display: block;
   width: 100%;
   height: 4px;
-  background: var(--background-base);
+  background: var(--background-base-darker);
   position: relative;
   overflow: hidden;
 }
 .pwa_loadBar::after {
   content: "";
   display: inline-block;
-  height: 4px;
+  height: 100%;
   width: calc( 100% * var(--value) / ( var(--max) - var(--min) ) );
-  background: var(--main-color);
+  background-color: var(--main-color);
   position: absolute;
   top: 0;
   left: 0;
   transition: 0.2s width ease;
+}
+.pwa_loadBar.win {
+  height: 20px;
+  border-radius: 1px;
+  background-color: var(--button-greyedout);
+  background-image: radial-gradient(rgba(255, 255, 255, 0.225), transparent 75%) !important;
+}
+.pwa_loadBar.win::after {
+  background-color: var(--success);
+}
+.pwa_loadBar.mac {
+  height: 12px;
+  border-radius: 6px;
+  background-color: var(--button-greyedout);
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.51), 0 0 2px rgba(255, 255, 255, 0.5);
+}
+.pwa_loadBar.mac::after {
+  background-color: var(--info);
+  animation-play-state: paused;
 }
 
 /*# sourceMappingURL=jammer.css.map */
