--- a/jammer.strippeddown.css
+++ b/jammer.strippeddown.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 body {
   --background-base: #fff;
-  --background-base-darker: #f9f9f9;
+  --background-base-darker: #f3f3f3;
   --text-base: #080808;
   --info: dodgerblue;
   --info-lighter: #f0f0f0;
@@ -28,7 +28,7 @@ body {
 }
 body.dark-mode {
   --background-base: #181818;
-  --background-base-darker: #0a0a0a;
+  --background-base-darker: #121212;
   --text-base: #fcfcfc;
   --info: dodgerblue;
   --info-lighter: #f0f0f0;
@@ -43,7 +43,7 @@ body.dark-mode {
 @media (prefers-color-scheme: dark) {
   body {
     --background-base: #181818;
-    --background-base-darker: #0a0a0a;
+    --background-base-darker: #121212;
     --text-base: #fcfcfc;
     --info: dodgerblue;
     --info-lighter: #f0f0f0;
@@ -166,6 +166,20 @@ sub {
 
 sup {
   top: -0.5rem;
+}
+
+time {
+  font-family: monospace;
+  font-size: 1.05rem;
+  white-space: nowrap;
+}
+
+blockquote {
+  font-style: italic;
+  display: block;
+  background: var(--background-base-darker);
+  border-left: 3px solid var(--main-color);
+  padding: 5px;
 }
 
 a {
@@ -428,6 +442,13 @@ input.alert[type=submit],
   line-height: 1.75;
 }
 
+body {
+  --main-color-forinput: var(--main-color);
+}
+body.dark-mode {
+  --main-color-forinput: var(--main-color-lighter);
+}
+
 select, textarea, input[type=text], input[type=number], input[type=date], input[type=datetime-local], input[type=email], input[type=url], input[type=password], input[type=search], input[type=tel], input[type=file], input[type=color] {
   font-family: inherit;
   font-size: 100%;
@@ -435,7 +456,9 @@ select, textarea, input[type=text], input[type=number], input[type=date], input[
   margin: 0;
   overflow: auto;
   border-color: transparent;
-  background: rgba(0, 0, 0, 0.05);
+  /*background: rgba(0,0,0,0.05);*/
+  background: var(--background-base-darker);
+  color: var(--text-base);
   padding: 0 1rem;
   line-height: 2;
   border-radius: 2px 2px 0 0;
@@ -444,14 +467,14 @@ select, textarea, input[type=text], input[type=number], input[type=date], input[
   border-width: 0 0 var(--input-border-bottom) 0;
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.1);
-  caret-color: var(--main-color);
+  caret-color: var(--main-color-forinput);
   transition: 0.2s border-bottom-color;
 }
 select:focus, textarea:focus, input[type=text]:focus, input[type=number]:focus, input[type=date]:focus, input[type=datetime-local]:focus, input[type=email]:focus, input[type=url]:focus, input[type=password]:focus, input[type=search]:focus, input[type=tel]:focus, input[type=file]:focus, input[type=color]:focus {
   outline: none;
 }
 select:focus:not([readonly]), textarea:focus:not([readonly]), input[type=text]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=search]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=file]:focus:not([readonly]), input[type=color]:focus:not([readonly]) {
-  border-color: var(--main-color);
+  border-color: var(--main-color-forinput);
 }
 select:focus:not([readonly])::placeholder, textarea:focus:not([readonly])::placeholder, input[type=text]:focus:not([readonly])::placeholder, input[type=number]:focus:not([readonly])::placeholder, input[type=date]:focus:not([readonly])::placeholder, input[type=datetime-local]:focus:not([readonly])::placeholder, input[type=email]:focus:not([readonly])::placeholder, input[type=url]:focus:not([readonly])::placeholder, input[type=password]:focus:not([readonly])::placeholder, input[type=search]:focus:not([readonly])::placeholder, input[type=tel]:focus:not([readonly])::placeholder, input[type=file]:focus:not([readonly])::placeholder, input[type=color]:focus:not([readonly])::placeholder {
   opacity: 0;
@@ -460,7 +483,7 @@ select:focus:not([readonly]) + .inputLabel, textarea:focus:not([readonly]) + .in
   left: 0;
   top: -0.5rem;
   font-size: 80%;
-  color: var(--main-color);
+  color: var(--main-color-forinput);
 }
 select::placeholder, textarea::placeholder, input[type=text]::placeholder, input[type=number]::placeholder, input[type=date]::placeholder, input[type=datetime-local]::placeholder, input[type=email]::placeholder, input[type=url]::placeholder, input[type=password]::placeholder, input[type=search]::placeholder, input[type=tel]::placeholder, input[type=file]::placeholder, input[type=color]::placeholder {
   font-weight: 500;
@@ -481,7 +504,7 @@ select:not(:focus):not([readonly]):not(:placeholder-shown) + .inputLabel, textar
   left: 0;
   top: -0.5rem;
   font-size: 80%;
-  color: var(--main-color);
+  color: var(--main-color-forinput);
 }
 
 input + .showPwd,
@@ -552,7 +575,7 @@ select + .selectHint, select + .inputLabel + .selectHint {
   margin-top: -2.057rem;
   margin-right: 1.5rem;
   position: relative;
-  z-index: -1;
+  z-index: 0;
   transition: 0.15s background-color ease-out;
 }
 select + .selectHint::after, select + .inputLabel + .selectHint::after {
@@ -652,16 +675,16 @@ input[type=checkbox]:checked + .switch::after {
   transform: translate(0.93rem, 0);
 }
 input[type=checkbox]:checked + .switch + .inputLabel + .inputLabel {
-  color: var(--main-color);
-  border-bottom-color: var(--main-color);
+  color: var(--main-color-forinput);
+  border-bottom-color: var(--main-color-forinput);
 }
 input[type=checkbox]:checked + .check {
   background: var(--main-color);
   border-color: var(--main-color);
 }
 input[type=checkbox]:checked + .check + .inputLabel {
-  color: var(--main-color);
-  border-bottom-color: var(--main-color);
+  color: var(--main-color-forinput);
+  border-bottom-color: var(--main-color-forinput);
 }
 input[type=checkbox]:not(:checked) + .check::after {
   opacity: 0;
@@ -706,8 +729,8 @@ input[type=radio]:checked + .radio {
   border-color: var(--main-color);
 }
 input[type=radio]:checked + .radio + .inputLabel {
-  color: var(--main-color);
-  border-bottom-color: var(--main-color);
+  color: var(--main-color-forinput);
+  border-bottom-color: var(--main-color-forinput);
 }
 input[type=radio]:not(:checked) + .radio::after {
   opacity: 0;
@@ -724,8 +747,8 @@ input[type=range]::-webkit-slider-thumb {
   position: relative;
   width: 1rem;
   height: 1.5rem;
-  background: var(--main-color);
-  border: 1px solid var(--main-color);
+  background: var(--main-color-forinput);
+  border: 1px solid var(--main-color-forinput);
   border-radius: 2px;
   cursor: pointer;
 }
@@ -737,7 +760,8 @@ input[type=range] {
   width: 100%;
   margin-top: 1.25rem;
   height: 1.25rem;
-  background: repeating-linear-gradient(90deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15) 10px, rgba(0, 0, 0, 0.25) 10px, rgba(0, 0, 0, 0.25) 11px);
+  background-color: var(--background-base-darker);
+  background-image: repeating-linear-gradient(90deg, transparent, transparent 10px, rgba(0, 0, 0, 0.15) 10px, rgba(0, 0, 0, 0.15) 11px);
   border-radius: 2px 2px 0 0;
   opacity: 0.85;
   cursor: pointer;
@@ -778,7 +802,7 @@ input[type=range] + .inputLabel {
   left: 0;
   top: 0;
   font-size: 80%;
-  color: var(--main-color);
+  color: var(--main-color-forinput);
 }
 
 input[type=number]:not(.no-buttons)::-webkit-inner-spin-button, input[type=number]:not(.no-buttons)::-webkit-outer-spin-button {
@@ -875,10 +899,10 @@ input[type=color]::after {
   top: 1.1rem;
 }
 input[type=color]:focus::-webkit-color-swatch {
-  border-color: var(--main-color);
+  border-color: var(--main-color-forinput);
 }
 input[type=color]:focus::before {
-  color: var(--main-color);
+  color: var(--main-color-forinput);
 }
 
 .tagLeft {
@@ -912,8 +936,8 @@ input[type=color]:focus::before {
 }
 
 .tagLeft:focus-within :first-child:not(button):not(.inputLabel) {
-  border-bottom-color: var(--main-color) !important;
-  color: var(--main-color) !important;
+  border-bottom-color: var(--main-color-forinput) !important;
+  color: var(--main-color-forinput) !important;
 }
 
 .tagRight {
@@ -950,12 +974,12 @@ input[type=color]:focus::before {
 }
 
 .tagRight:focus-within *:last-child:not(button):not(.inputLabel) {
-  border-bottom-color: var(--main-color) !important;
-  color: var(--main-color) !important;
+  border-bottom-color: var(--main-color-forinput) !important;
+  color: var(--main-color-forinput) !important;
 }
 
 input[type=password] {
-  color: var(--main-color);
+  color: var(--main-color-forinput);
 }
 input[type=password]::placeholder {
   color: var(--text-base);
@@ -977,7 +1001,7 @@ input + .inputLabel + .showPwd::after {
 
 input[type=text] + .showPwd,
 input[type=text] + .inputLabel + .showPwd {
-  background: var(--main-color);
+  background: var(--main-color-forinput);
   color: var(--main-text-cl);
 }
 
@@ -988,6 +1012,11 @@ input[type=checkbox]:checked + .switch + .inputLabel {
 input[type=checkbox]:not(:checked) + .switch + .inputLabel + .inputLabel {
   right: 50%;
   opacity: 0;
+}
+
+[contenteditable]:active, [contenteditable]:focus {
+  outline: 1px solid var(--main-color-forinput) !important;
+  box-shadow: 0 0 5px var(--main-color-forinput);
 }
 
 /*# sourceMappingURL=jammer.strippeddown.css.map */
