--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,6 +1,6 @@
 %baseColors{
 	--background-base: #fff;
-	--background-base-darker: #f9f9f9;
+	--background-base-darker: #f3f3f3;
 	--text-base: #080808;
 
 	--info: dodgerblue;
@@ -14,7 +14,7 @@
 }
 @mixin darkModeColors(){
 	--background-base: #181818;
-	--background-base-darker: #0a0a0a;
+	--background-base-darker: #121212;
 	--text-base: #fcfcfc;
 
 	--info: dodgerblue;
