new file:   example2.html 	modified:   jammer.css 	modified:   jammer.css.map 	modified:   jammer.min.css 	modified:   jammer.min.css.map 	modified:   sass/_components.scss

--- a/jammer.css
+++ b/jammer.css
@@ -1399,7 +1399,9 @@ input[type=checkbox]:not(:checked) + .switch + .inputLabel + .inputLabel {
 
 .app-body {
   position: relative;
-  height: calc( 100vh - var(--header-height) );
+  min-height: calc( 100vh - var(--header-height) );
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .box-alert, .box-warning, .box-success, .box-info {
