--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,5 +1,5 @@
 :root{
-	line-height: 1.15;
+	line-height: 1.2;
 	-webkit-text-size-adjust: 100%;
 	width:100%;
 	height:100%;
@@ -10,7 +10,7 @@
 body{
 	margin:0;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
+	font-size: var(--base-font-size);
 	width:100%;
 	height:100%;
 	background: var(--background-base);
