--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -45,8 +45,9 @@ body{
 	}
 
 	/*- other variables -*/
+	--base-font-size:14px;
 	--input-border-bottom: 2px;
-	--header-height: 3.5rem;
+	--header-height: 48px;
 }
 
 @media( prefers-color-scheme: dark ){
