--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -10,7 +10,7 @@
 	color: var(--main-text-cl);
 	display: grid;
 	grid-template-columns: 4rem auto 4rem;
-	padding: 0 1rem;
+	padding: 0;
 
 	*{
 		overflow:hidden;
@@ -29,9 +29,9 @@
 				width: 100%;
 				height: 100%;
 				background: var(--main-text-cl);
-				clip-path: polygon( 10% 30%, 90% 30%, 90% 35%, 10% 35%, 
-									10% 50%, 90% 50%, 90% 55%, 10% 55%, 
-									10% 70%, 90% 70%, 90% 75%, 10% 75% );
+				clip-path: polygon( 20% 30%, 80% 30%, 80% 35%, 20% 35%, 
+									20% 50%, 80% 50%, 80% 55%, 20% 55%, 
+									20% 70%, 80% 70%, 80% 75%, 20% 75% );
 			}
 			&:active{
 				&::after{
@@ -41,9 +41,12 @@
 		}
 	}
 	h1{
-		height: 100%;
+		height: var(--header-height);
 		margin: 0;
-		line-height: 200%;
+		line-height: var(--header-height);
+		font-size: 1.75rem;
+		vertical-align: middle;
+		user-select: none;
 	}
 }
 .app-body{
