--- a/sass/_inputfields.scss
+++ b/sass/_inputfields.scss
@@ -153,6 +153,7 @@ select{
 		}
 	}
 
+
 	&+.selectHint,
 	&+.inputLabel+.selectHint{
 		display:inline-block;
@@ -165,6 +166,7 @@ select{
 		margin-right: 1.5rem;
 		position:relative;
 		z-index:0;
+		pointer-events: none;
 		transition: 0.15s background-color ease-out;
 
 		&::after{
@@ -389,6 +391,7 @@ input[type="radio"]{
 
 }
 
+
 %rangeThumb{
 	display: block;
 	position: relative;
@@ -401,44 +404,15 @@ input[type="radio"]{
 }
 
 input[type="range"]{
+	@extend %inputFields;
 	-webkit-appearance: none !important;
 	appearance: none !important;
-	outline: none;
-	width: 100%;
-	margin-top:1.25rem;
-	height: 1.25rem;
-	background-color: var(--background-base-darker);
-	background-image: repeating-linear-gradient(90deg, transparent, transparent 10px, rgba(0, 0, 0, 0.15) 10px, rgba(0, 0, 0, 0.15) 11px);
-	border-radius: 2px 2px 0 0;
-	opacity: 0.85;
-	cursor:pointer;
-	transition: opacity 0.2s ease-out;
-	border-color: transparent transparent var(--main-color-lighter) transparent;
-	border-style: solid;
-	border-width: 0 0 2px 0;
+	padding-left:0;
+	padding-right:0;
 
-	/* still not supported */
-	/*&::before{
-		color: var(--text-base);
-		margin-left: 0.5rem;
-		float:left;
-		z-index:2;
-		content: attr(min);
-	}
-	&::after{
-		color: var(--text-base);
-		margin-right:0.5rem;
-		float:right;
-		z-index:2;
-		content: attr(max);
-	}*/
 	&:hover{
 		opacity: 1;
 	}
-	/*&::-moz-range-thumb{
-		-moz-appearance: none;
-		@extend %rangeThumb;
-	}*/
 	&::-webkit-slider-thumb{
 		-webkit-appearance: none;
 		@extend %rangeThumb;
@@ -452,6 +426,23 @@ input[type="range"]{
 		top: 0;
 		font-size: 80%;
 		color: var(--main-color-forinput);
+	}
+
+	&::before{
+		content: attr(min);
+	}
+	&::after{
+		content: attr(max);
+	}
+	&::before,
+	&::after{
+		color: var(--main-color-lighter);
+		line-height: 1.25rem;
+		font-size: 0.8rem;
+		opacity: 0.85;
+		text-align:center;
+		padding: 0 8px;
+		font-weight:bold;
 	}
 }
 
