modified:   jammer.css 	modified:   jammer.css.map 	modified:   jammer.min.css 	modified:   jammer.min.css.map 	modified:   jammer.strippeddown.css 	modified:   jammer.strippeddown.css.map 	modified:   jammer.strippeddown.min.css 	modified:   jammer.strippeddown.min.css.map 	modified:   sass/_inputfields.scss

--- a/jammer.strippeddown.css
+++ b/jammer.strippeddown.css
@@ -748,18 +748,19 @@ input[type=range]::-webkit-slider-thumb {
   display: block;
   position: relative;
   width: 1rem;
-  height: 1.5rem;
+  height: calc( 2.5rem - 2px );
   background: var(--main-color-forinput);
   border: 1px solid var(--main-color-forinput);
-  border-radius: 2px;
+  margin: 0;
   cursor: pointer;
+  clip-path: polygon(0 20%, 49% 1%, 51% 1%, 100% 20%, 100% 100%, 0 100%);
 }
 
 input[type=range] {
   -webkit-appearance: none !important;
   appearance: none !important;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 0;
+  height: 2.5rem;
 }
 input[type=range]:hover {
   opacity: 1;
@@ -783,13 +784,21 @@ input[type=range]::after {
   content: attr(max);
 }
 input[type=range]::before, input[type=range]::after {
-  color: var(--main-color-lighter);
-  line-height: 1.25rem;
+  background: rgba(0, 0, 0, 0.1);
+  color: var(--background-base);
+  line-height: 2.5rem;
+  height: 100%;
+  display: inline-block;
   font-size: 0.8rem;
   opacity: 0.85;
   text-align: center;
   padding: 0 8px;
   font-weight: bold;
+  transition: 0.2s background-color ease-out, 0.2s color ease-out;
+}
+input[type=range]:focus::before, input[type=range]:focus::after {
+  background: var(--main-color);
+  color: var(--main-text-cl);
 }
 
 input[type=number]:not(.no-buttons)::-webkit-inner-spin-button, input[type=number]:not(.no-buttons)::-webkit-outer-spin-button {
